--- a/For_AI/Normal_Discussion/index.html
+++ b/For_AI/Normal_Discussion/index.html
@@ -20,5 +20,6 @@
             I am Jr Embedded Hardware and Software Engineer at Kali Medtech Pvt Ltd joined on 14 May, 2025. Make sure about current date month and year.
         </li>
     </ul>
+<!--     Till now I was working on Microcontroller, since 2016. Drop year after 12th commerce, I used to know about Arduino, I saw youtube videos,  -->
 </body>
 </html>
